@@ -317,6 +317,9 @@ extern int ntfs_attr_update_mapping_pairs(ntfs_attr *na, VCN from_vcn);
 
 extern int ntfs_attr_truncate(ntfs_attr *na, const s64 newsize);
 
+extern int ntfs_attr_exist(ntfs_inode *ni, const ATTR_TYPES type,
+		ntfschar *name, u32 name_len);
+
 // FIXME / TODO: Above here the file is cleaned up. (AIA)
 /**
  * get_attribute_value_length - return the length of the value of an attribute
