@@ -2,9 +2,12 @@ xx/xx/2006 - x.xx.x - .
 
 	- ntfsmount now creates files and directories with security descriptor
 	  that grant full access to everyone.  (Yura)
+	- Fix typo that lead to incorrect sparse file size calculation.  (Yuval)
 	- Fix long standing stupendously stupid bug in libntfs/attrib.c::
 	  ntfs_external_attr_find() and also port a bugfix from the advanced
 	  ntfs kernel driver to the same function.  (Anton)
+	- Add new API ntfs_attr_exist() that checks whether attribute with
+	  selected type and name already present in inode.  (Szaka)
 
 21/06/2006 - 1.13.1 - Various fixes.
 
